[package]
name = "rustrunner"
version = "0.1.0"
edition = "2021"
authors = ["RustRunner Team"]
description = "A visual workflow execution engine for bioinformatics pipelines"
license = "MIT"
repository = "https://github.com/rustrunner/rustrunner"
keywords = ["workflow", "bioinformatics", "pipeline", "automation"]
categories = ["science", "command-line-utilities"]

[lib]
name = "rustrunner"
path = "src/lib.rs"

[[bin]]
name = "rustrunner"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
log = "0.4"
env_logger = "0.10"

# System information
sysinfo = "0.30"
num_cpus = "1.16"

# Utilities
once_cell = "1.19"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Terminal colors (optional, for CLI output)
colored = "2.1"

[dev-dependencies]
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
